--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-particles-js": "^3.6.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-typical": "^0.1.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tsparticles": "^1.37.5"
   }
 }
