--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-particles-js": "^3.6.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll-parallax": "^2.4.0",
     "react-typical": "^0.1.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
