--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-particles-js": "^3.6.0",
+    "react-preloaders": "^3.0.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
+    "react-slider-swiper": "^2.0.6",
+    "react-tsparticles": "^1.37.5",
     "react-typical": "^0.1.3",
     "styled-components": "^5.3.3",
+    "swiper": "^7.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
